@@ -8,28 +8,73 @@
 
 Docker image for starting [Apache Zeppelin](https://zeppelin.apache.org/).
 
+## How to build the container
+
+Note: Must run `binary` command with **Java version 8** installed.
+
+```bash
+# Download dependencies
+./build download --zeppelin_version=v0.8.2 --spark_version=2.4.3 --hadoop_version=2.7
+
+# Build binaries
+./build binary --zeppelin_version=v0.8.2 --spark_version=2.4.3 --hadoop_version=2.7
+
+# Build docker container
+./build docker --repo=${DOCKER_NAMESPACE:-datascienceplatform}/zeppelind --commit=$(git rev-parse --short HEAD)
+```
+
+### All: Download, build binary dependencies and build the container
+
+```bash
+./build all --zeppelin_version=v0.8.2 --spark_version=2.4.3 --hadoop_version=2.7
+```
+
 ## Usage
 
 You can either start the image directly with Docker, or use the [Nomad-Docker-Wrapper](https://github.com/Data-Science-Platform/nomad-docker-wrapper) if you are running your containers on Nomad.
 
-```
+There are now 2 options for running Zeppelin; multi-user or single-user mode.  If you wish to test the SSSD integration you will need to run the sssd container which is explained in the sssd [project documentation](https://gitlab.gda.allianz/bde/sssd).  You need to share a volume `/var/sssd/{{id}}/var/lib/sss/pipes:/var/lib/sss/pipes:rw` on both the zeppelin container and the sssd container.  Start the sssd container prior to starting the zeppelin container.
+
+```sh
+# Multi-user login
 docker run -p 8080:8080 \
+  -e ZEPPELIN_PROCESS_USER_NAME="zeppelin" \
+  -e ZEPPELIN_MEM="-Xmx1024m" \
+  -e ZEPPELIN_PROCESS_USER_ID=12345 \
+  -e ZEPPELIN_SERVER_PORT=8085 \
+  -e ZEPPELIN_SPARK_DRIVER_MEMORY="512M" \
+  -e ZEPPELIN_NOTEBOOK_STORAGE=org.apache.zeppelin.notebook.repo.GitNotebookRepo \
+  -e ZEPPELIN_PROCESS_GROUP_NAME="DSP1_USERS" \
+  -e ZEPPELIN_PYSPARK_PYTHON=/usr/bin/python \
+  -e ZEPPELIN_SPARK_UI_PORT=4045 \
+  -e ZEPPELIN_PROCESS_GROUP_ID=12340 \
   -e ZEPPELIN_SPARK_MASTER="local[*]" \
   -e ZEPPELIN_PASSWORD="secret" \
-  -e ZEPPELIN_NOTEBOOK_STORAGE=org.apache.zeppelin.notebook.repo.VFSNotebookRepo \
-  -e ZEPPELIN_PROCESS_USER_NAME="zeppelinu" \
-  -e ZEPPELIN_PROCESS_USER_ID=12345 \
-  -e ZEPPELIN_PROCESS_GROUP_NAME="zeppeling" \
-  -e ZEPPELIN_PROCESS_GROUP_ID=12340 \
-  -e ZEPPELIN_SERVER_PORT=8080 \
-  -e ZEPPELIN_SPARK_DRIVER_MEMORY="512M" \
-  -e ZEPPELIN_SPARK_UI_PORT=4040 \
-  -e ZEPPELIN_PYSPARK_PYTHON=/usr/bin/python \
-  -e ZEPPELIN_MEM="-Xms1024m -Xmx1024m -XX:MaxPermSize=512m" \
+  -e ZEPPELIN_USER_TYPE=multiuser \
   -v $(pwd)/notebooks:/usr/local/zeppelin/notebooks \
   -v $(pwd)/conf:/usr/local/zeppelin/conf \
   -v $(pwd)/hive:/hive \
-  datascienceplatform/zeppelind:latest-zv0.6.2-s2.0.2-h2.7
+  -t pactosystems/zeppelind:f9d604cf-zv0.8.2-s2.4.3-h2.7
+
+# Single-user login
+  docker run -p 8080:8080 \
+  -e ZEPPELIN_PROCESS_USER_NAME="zeppelin" \
+  -e ZEPPELIN_MEM="-Xmx1024m" \
+  -e ZEPPELIN_PROCESS_USER_ID=12345 \
+  -e ZEPPELIN_SERVER_PORT=8080 \
+  -e ZEPPELIN_SPARK_DRIVER_MEMORY="512M" \
+  -e ZEPPELIN_NOTEBOOK_STORAGE=org.apache.zeppelin.notebook.repo.GitNotebookRepo \
+  -e ZEPPELIN_PROCESS_GROUP_NAME="DSP1_USERS" \
+  -e ZEPPELIN_PYSPARK_PYTHON=/usr/bin/python \
+  -e ZEPPELIN_SPARK_UI_PORT=4040 \
+  -e ZEPPELIN_PROCESS_GROUP_ID=12340 \
+  -e ZEPPELIN_SPARK_MASTER="local[*]" \
+  -e ZEPPELIN_PASSWORD="secret" \
+  -e ZEPPELIN_USER_TYPE=singleuser \
+  -v $(pwd)/notebooks:/usr/local/zeppelin/notebooks \
+  -v $(pwd)/conf:/usr/local/zeppelin/conf \
+  -v $(pwd)/hive:/hive \
+  -t pactosystems/zeppelind:f9d604cf-zv0.8.2-s2.4.3-h2.7
 ```
 
 ## Configuration
@@ -54,7 +99,7 @@ The docker image requires some environment variables to be set. They are used to
 ## Travis CI/CD
 
 These environment variables should be defined and set appropriately in your Travis CI Settings.
-https://travis-ci.org/<your travis account name>/docker-zeppelin/settings
+`https://travis-ci.org/<your travis account name>/docker-zeppelin/settings`
 
 | Variable | Description |
 | -------- | ----------- |
@@ -74,9 +119,9 @@ SQL databases are supported trough [SQLAlchemy](https://docs.sqlalchemy.org/en/l
 
 Support for additional databases can be added by installing additional [dialects](https://docs.sqlalchemy.org/en/latest/dialects/) into an anaconda environment and setting `ZEPPELIN_PYSPARK_PYTHON` to the environment location.
 
-###  Microsoft SQL Server Example
+### Microsoft SQL Server Example
 
-```
+```bash
 %spark.pyspark
 import sqlalchemy
 from sqlalchemy import create_engine
@@ -88,9 +133,9 @@ for row in res:
     print row
 ```
 
-###  PostgreSQL Example
+### PostgreSQL Example
 
-```
+```bash
 %spark.pyspark
 import sqlalchemy
 from sqlalchemy import create_engine
@@ -102,9 +147,9 @@ for row in res:
     print row
 ```
 
-###  Oracle Example
+### Oracle Example
 
-```
+```bash
 %spark.pyspark
 import sqlalchemy
 from sqlalchemy import create_engine
